# AbletonMCP

./: .gitignore  CHANGELOG.md  LICENSE  README.md  deploy.ps1  pyproject.toml  server_arrangement.py
AbletonMCPArrangement/: __init__.py  commands_arrangement.py  commands_automation.py  commands_browser.py  commands_devices.py  commands_scenes.py  commands_session.py
AbletonMCPLocal/: __init__.py  commands_arrangement.py  commands_automation.py  commands_browser.py  commands_devices.py  commands_scenes.py  commands_session.py
ableton/: __init__.py  connection.py  tools_arrangement.py  tools_automation.py  tools_browser.py  tools_devices.py  tools_scenes.py  tools_session.py
