[project]
name = "ableton-mcp-arrangement"
version = "1.2.1"
description = "Ableton Live integration through the Model Context Protocol with Arrangement View support"
authors = [{ name = "windmonarch" }]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/windmonarch/AbletonMCP"
Issues = "https://github.com/windmonarch/AbletonMCP/issues"

[project.scripts]
ableton-mcp = "server_arrangement:main"

[tool.setuptools.packages.find]
include = ["ableton*"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"
